# Image-Processing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: main.cpp
src/: image.cpp  image.hpp  image_type.hpp
test/: main.cpp
